--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,3 +2,5 @@ export(date2ISOweek)
 export(ISOweek)
 export(ISOweek2date)
 export(ISOweekday)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_match)
